--- a/SampleApps/TestAppObjC/Base.lproj/Main.storyboard
+++ b/SampleApps/TestAppObjC/Base.lproj/Main.storyboard
@@ -28,8 +28,19 @@
                                     <action selector="btnGetECIDClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ycl-Jx-zTm"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xW0-Pe-EfU">
+                                <rect key="frame" x="30" y="147" width="108" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ER3-65-Esr"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="tg4-Dd-dWm"/>
+                                </constraints>
+                                <state key="normal" title="GetUrlVariables"/>
+                                <connections>
+                                    <action selector="btnGetUrlVariablesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iDg-xN-AaW"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oau-IT-CCZ">
-                                <rect key="frame" x="30" y="171" width="190" height="30"/>
+                                <rect key="frame" x="30" y="241" width="190" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="523-cp-iaG"/>
                                     <constraint firstAttribute="width" constant="190" id="wim-0C-67P"/>
@@ -40,7 +51,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kqt-Aj-UIc">
-                                <rect key="frame" x="224" y="171" width="76" height="30"/>
+                                <rect key="frame" x="30" y="269" width="190" height="30"/>
                                 <state key="normal" title="Remove Identity"/>
                                 <connections>
                                     <action selector="btnRemoveIdentity:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yfW-xf-2jW"/>
@@ -65,7 +76,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Tap GetECID button" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="TIB-fb-Hj0">
-                                <rect key="frame" x="30" y="126" width="270" height="30"/>
+                                <rect key="frame" x="30" y="111" width="270" height="30"/>
                                 <color key="backgroundColor" white="0.95721853599999995" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="luR-ZR-0Q2"/>
@@ -75,28 +86,28 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Tap Get Identies Button" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Amy-mn-hP0">
-                                <rect key="frame" x="30" y="366" width="260" height="152"/>
+                                <rect key="frame" x="30" y="369" width="260" height="189"/>
                                 <color key="backgroundColor" white="0.95721853595890416" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2k1-D3-64F">
-                                <rect key="frame" x="30" y="247" width="270" height="30"/>
+                                <rect key="frame" x="30" y="331" width="270" height="30"/>
                                 <state key="normal" title="Reset Identites (Core)"/>
                                 <connections>
                                     <action selector="resetIdentitiesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M7m-Df-0Rx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bbc-YC-Ppd">
-                                <rect key="frame" x="30" y="209" width="270" height="30"/>
+                                <rect key="frame" x="30" y="212" width="270" height="30"/>
                                 <state key="normal" title="Get Identites"/>
                                 <connections>
                                     <action selector="btnGetIdentitesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zmm-pw-TAk"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xs-gh-NkX" userLabel="Btn SetAdvertisingId">
-                                <rect key="frame" x="30" y="285" width="77" height="30"/>
+                                <rect key="frame" x="30" y="301" width="77" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="77" id="DWh-0j-4Rz"/>
                                 </constraints>
@@ -106,10 +117,20 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="device_adid" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZUp-nM-tXo" userLabel="editField AdvertisingId">
-                                <rect key="frame" x="123" y="281" width="177" height="34"/>
+                                <rect key="frame" x="123" y="299" width="177" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Tap GetUrlVariables button" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="mhz-NT-LK0">
+                                <rect key="frame" x="30" y="174" width="270" height="30"/>
+                                <color key="backgroundColor" white="0.95721853599999995" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5lG-Rm-6w6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -118,31 +139,36 @@
                             <constraint firstItem="2k1-D3-64F" firstAttribute="leading" secondItem="Bbc-YC-Ppd" secondAttribute="leading" id="2l4-eM-d2H"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bbc-YC-Ppd" secondAttribute="trailing" constant="20" id="405-hM-g2y"/>
                             <constraint firstItem="2k1-D3-64F" firstAttribute="trailing" secondItem="ZUp-nM-tXo" secondAttribute="trailing" id="4fp-6U-aMb"/>
-                            <constraint firstItem="Bbc-YC-Ppd" firstAttribute="top" secondItem="Oau-IT-CCZ" secondAttribute="bottom" constant="8" id="7ce-uN-rBQ"/>
+                            <constraint firstItem="Bbc-YC-Ppd" firstAttribute="top" secondItem="Oau-IT-CCZ" secondAttribute="bottom" constant="-59" id="7ce-uN-rBQ"/>
                             <constraint firstItem="RxJ-HI-QkE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="A0W-7l-GKN"/>
-                            <constraint firstItem="Oau-IT-CCZ" firstAttribute="top" secondItem="TIB-fb-Hj0" secondAttribute="bottom" constant="15" id="CyE-Md-u2j"/>
-                            <constraint firstItem="ZUp-nM-tXo" firstAttribute="top" secondItem="2k1-D3-64F" secondAttribute="bottom" constant="4" id="E4p-we-Rbm"/>
+                            <constraint firstItem="Oau-IT-CCZ" firstAttribute="top" secondItem="TIB-fb-Hj0" secondAttribute="bottom" constant="100" id="CyE-Md-u2j"/>
+                            <constraint firstItem="ZUp-nM-tXo" firstAttribute="top" secondItem="2k1-D3-64F" secondAttribute="bottom" constant="-62" id="E4p-we-Rbm"/>
+                            <constraint firstItem="mhz-NT-LK0" firstAttribute="leading" secondItem="xW0-Pe-EfU" secondAttribute="leading" id="E6H-ZL-4MJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TIB-fb-Hj0" secondAttribute="trailing" constant="20" id="Fp8-s4-Hp4"/>
                             <constraint firstItem="Bbc-YC-Ppd" firstAttribute="trailing" secondItem="ZUp-nM-tXo" secondAttribute="trailing" id="Gxe-tb-rU3"/>
                             <constraint firstItem="Oau-IT-CCZ" firstAttribute="leading" secondItem="TIB-fb-Hj0" secondAttribute="leading" id="N5G-rL-HlP"/>
+                            <constraint firstItem="mhz-NT-LK0" firstAttribute="leading" secondItem="Bbc-YC-Ppd" secondAttribute="leading" id="OAZ-NH-5fL"/>
                             <constraint firstItem="ZUp-nM-tXo" firstAttribute="leading" secondItem="9Xs-gh-NkX" secondAttribute="trailing" constant="16" id="Pgk-hW-JrP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kqt-Aj-UIc" secondAttribute="trailing" constant="20" id="SPA-eh-4aL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kqt-Aj-UIc" secondAttribute="trailing" constant="100" id="SPA-eh-4aL"/>
                             <constraint firstItem="p6W-M3-61y" firstAttribute="top" secondItem="RxJ-HI-QkE" secondAttribute="bottom" constant="10" id="T87-0n-v9S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Stt-bD-cA3" secondAttribute="trailing" symbolic="YES" id="ThT-cp-seM"/>
                             <constraint firstItem="2k1-D3-64F" firstAttribute="leading" secondItem="Oau-IT-CCZ" secondAttribute="leading" id="TqP-Jr-wPL"/>
-                            <constraint firstItem="9Xs-gh-NkX" firstAttribute="bottom" secondItem="ZUp-nM-tXo" secondAttribute="bottom" id="XAa-BH-qKA"/>
-                            <constraint firstItem="Amy-mn-hP0" firstAttribute="top" secondItem="9Xs-gh-NkX" secondAttribute="bottom" constant="51" id="XQP-XA-T4A"/>
-                            <constraint firstItem="2k1-D3-64F" firstAttribute="top" secondItem="Bbc-YC-Ppd" secondAttribute="bottom" constant="8" id="Yif-Hi-CvF"/>
+                            <constraint firstItem="9Xs-gh-NkX" firstAttribute="bottom" secondItem="ZUp-nM-tXo" secondAttribute="bottom" constant="-2" id="XAa-BH-qKA"/>
+                            <constraint firstItem="Amy-mn-hP0" firstAttribute="top" secondItem="9Xs-gh-NkX" secondAttribute="bottom" constant="38" id="XQP-XA-T4A"/>
+                            <constraint firstItem="2k1-D3-64F" firstAttribute="top" secondItem="Bbc-YC-Ppd" secondAttribute="bottom" constant="89" id="Yif-Hi-CvF"/>
                             <constraint firstItem="RxJ-HI-QkE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="bnd-8K-UbN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Amy-mn-hP0" secondAttribute="bottom" constant="50" id="c7f-oC-4yQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Amy-mn-hP0" secondAttribute="bottom" constant="10" id="c7f-oC-4yQ"/>
+                            <constraint firstItem="Bbc-YC-Ppd" firstAttribute="top" secondItem="mhz-NT-LK0" secondAttribute="bottom" constant="8" symbolic="YES" id="dcM-E1-3XZ"/>
                             <constraint firstItem="Stt-bD-cA3" firstAttribute="top" secondItem="p6W-M3-61y" secondAttribute="bottom" constant="30" id="ee5-fw-glL"/>
+                            <constraint firstItem="mhz-NT-LK0" firstAttribute="trailing" secondItem="Bbc-YC-Ppd" secondAttribute="trailing" id="etS-NA-vLo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Amy-mn-hP0" secondAttribute="trailing" constant="30" id="fN5-WN-xXq"/>
-                            <constraint firstItem="TIB-fb-Hj0" firstAttribute="top" secondItem="Stt-bD-cA3" secondAttribute="bottom" constant="10" id="hEV-Zz-aQF"/>
+                            <constraint firstItem="TIB-fb-Hj0" firstAttribute="top" secondItem="Stt-bD-cA3" secondAttribute="bottom" constant="-5" id="hEV-Zz-aQF"/>
                             <constraint firstItem="p6W-M3-61y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="hur-b0-scA"/>
                             <constraint firstItem="Stt-bD-cA3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="jPg-kH-QqN"/>
-                            <constraint firstItem="Kqt-Aj-UIc" firstAttribute="baseline" secondItem="Oau-IT-CCZ" secondAttribute="baseline" id="jYO-iG-U9J"/>
-                            <constraint firstItem="Kqt-Aj-UIc" firstAttribute="leading" secondItem="Oau-IT-CCZ" secondAttribute="trailing" constant="4" id="jyv-ec-e2I"/>
+                            <constraint firstItem="Kqt-Aj-UIc" firstAttribute="baseline" secondItem="Oau-IT-CCZ" secondAttribute="baseline" constant="28" id="jYO-iG-U9J"/>
+                            <constraint firstItem="Kqt-Aj-UIc" firstAttribute="leading" secondItem="Oau-IT-CCZ" secondAttribute="trailing" constant="-190" id="jyv-ec-e2I"/>
                             <constraint firstItem="Bbc-YC-Ppd" firstAttribute="leading" secondItem="9Xs-gh-NkX" secondAttribute="leading" id="mZI-mW-hnI"/>
+                            <constraint firstItem="xW0-Pe-EfU" firstAttribute="top" secondItem="TIB-fb-Hj0" secondAttribute="bottom" constant="6" id="nq4-Bn-tB9"/>
                             <constraint firstItem="TIB-fb-Hj0" firstAttribute="leading" secondItem="Stt-bD-cA3" secondAttribute="leading" id="vJS-YL-WIy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p6W-M3-61y" secondAttribute="trailing" constant="10" id="wL6-hU-ZxF"/>
                             <constraint firstItem="Amy-mn-hP0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="z1y-9G-Lge"/>
@@ -152,13 +178,14 @@
                         <outlet property="advertisingIdValue" destination="ZUp-nM-tXo" id="GS9-Ep-yJr"/>
                         <outlet property="btnUpdateIdentities" destination="Oau-IT-CCZ" id="wkU-L7-n5K"/>
                         <outlet property="lblECID" destination="TIB-fb-Hj0" id="zlp-md-AiA"/>
+                        <outlet property="lblUrlVariables" destination="mhz-NT-LK0" id="e7F-3G-5ed"/>
                         <outlet property="lblextensionVersion" destination="RxJ-HI-QkE" id="EsV-sk-eer"/>
                         <outlet property="txtAllIdentities" destination="Amy-mn-hP0" id="oRF-KC-1in"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140.57971014492756" y="138.61607142857142"/>
+            <point key="canvasLocation" x="138.75" y="138.38028169014083"/>
         </scene>
     </scenes>
     <resources>
